--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
@@ -1,6 +1,9 @@
 # Thực hành buổi 1
 
-[Download tài liệu buổi 1](https://github.com/Zenfection/zenctu/raw/main/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/file/1.pdf)
+::: tip 📁 TÀI NGUYÊN
+
+[Download tài liệu buổi 1](https://drive.google.com/file/d/1thfmW_D8_IR1XGLPiDgiPF0tUlHEM19M/view)
+:::
 
 ## I.Chuẩn bị 
 
