--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
@@ -1,5 +1,8 @@
 # Thực hành buổi 4
 
-[Download tài liệu buổi 4](https://github.com/Zenfection/zenctu/raw/main/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/file/4.pdf)
+::: tip 📁 TÀI NGUYÊN
+
+[Download tài liệu buổi 4](https://drive.google.com/file/d/1vBLub8CTxLuUR47jGFbx6hDFt9h6LOIR/view)
+:::
 
 <comment/>
