--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
@@ -1,5 +1,8 @@
 # Buổi hành buỗi 5
 
-[Download tài liệu buổi 5](https://github.com/Zenfection/zenctu/raw/main/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/file/5.pdf)
+::: tip 📁 TÀI NGUYÊN
+
+[Download tài liệu buổi 5](https://drive.google.com/file/d/1rHp7dDF96xn4eNjNn7qGO8kW_2-_p6GE/view)
+:::
 
 <comment/>
