--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/3.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/3.md
@@ -1,9 +1,9 @@
 # Bài 3: Cạnh kề, đỉnh kề, bậc
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo Video sau đây : 
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
-  <iframe width="637" height="478" src="https://www.youtube.com/embed/t06TmbCrRts?start=237&list=PLZDIOVvUyYVxdqTsJ9yvg9TSv4TnQoglO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe src="https://drive.google.com/file/d/1D6Dg8VepyyVsgjvxo6RRzA-WwMKVS4kv/preview"></iframe>
 </div>
 
 ## 1.Liên quan giữa cạnh và đỉnh
