--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/4.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/4.md
@@ -1,9 +1,9 @@
 # Bài 4: Đồ thị đặc biệt
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo Video sau đây : 
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
-    <iframe width="1520" height="545" src="https://www.youtube.com/embed/b3LukM7NxGc?list=PLZDIOVvUyYVxdqTsJ9yvg9TSv4TnQoglO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://drive.google.com/file/d/1ABDO8scgRZh1SztMysfQ3qY1XGNbripu/preview"></iframe>
 </div>
 
 ## 1.Đồ thị con và bộ phận
