--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/8.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/8.md
@@ -1,35 +1,40 @@
 # Bài 8. Đồ thị dạng Cây
 
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1SRJa-qq7G_pMFAT2RD0Wk_ELzXM_kUTE/preview"></iframe>
+</div>
 
 ## Định nghĩa
 
-- Cây (`tree`) là một **đồ thị vô hướng**, **liên thông** và **không có chu trình**
+::: tip 💡 GHI NHỚ 
+
+-  Cây (`tree`) là một **đồ thị vô hướng**, **liên thông** và **không có chu trình**
 
 - Rừng (`forest`) là một đồ thị mà mỗi thành phần **liên thông** của nó là một cây
 
-  ==> Suy ra, đồ thị không có chu trình là một rừng
+==> Suy ra, đồ thị không có chu trình là một rừng
+:::
 
 ## Tính chất của cây
 
-::: tip Định lý về đỉnh treo
+::: tip 💡  ĐỈNH LÝ VỀ ĐỈNH TREO
 
-Nếu một cây `T` gồm `n` đỉnh với `n >= 2` thì `T` chứa ít nhất 2 đỉnh treo
+Nếu một cây `T` gồm `n` đỉnh với `n ≥ 2` thì `T` chứa ít nhất `2` **đỉnh treo**
 :::
-
-### Tính chất
 
 Đơn đồ thị `T=(V, E)` là một đồ thị vô hướng `n` đỉnh. Khi đó, các mệnh đề sau tương đương :
 
-  1. `T` là một cây liên thông và mỗi cạnh của nó đều là cạnh cầu
-
-  2. `T` không chứa chu trình (nhưng thêm vào 1 cạnh bất kỳ thì thu được 1 chu trình) và có `n-1` cạnh
-
-
-  3. Hai đỉnh bất kỳ của `T` được nối với nhau bởi đúng một đường đơn
+> 1. `T` là một cây **liên thông** và mỗi cạnh của nó đều là cạnh cầu
+>
+> 2. `T` không chứa **chu trình** (nhưng thêm vào 1 cạnh bất kỳ thì thu được 1 **chu trình**) và có `n-1` cạnh
+>
+> 3. Hai đỉnh bất kỳ của `T` được nối với nhau bởi đúng một đường đơn
 
 ## Cây khung của đồ thị
 
-- Nếu đồ thị bộ phận `T` của đồ thị vô hướng liên thông, `G=(V, E)` là một cya6 thì khi đó cây `T` được gọi là **cây khung** (`spanning tree`) của đồ thị `G`
+- Nếu đồ thị bộ phận `T` của đồ thị vô hướng **liên thông**, `G=(V, E)` là một cya6 thì khi đó cây `T` được gọi là **cây khung** (`spanning tree`) của đồ thị `G`
 
 - Cây khung còn có tên gọi khác là cây phủ, cây bao trùm, cây tối đại.
 
@@ -57,5 +62,19 @@ Giả sử `T=(Vₜ, Eₜ)` là cây khung của đồ thị `G`. Ta gọi độ
 <img src="https://render.githubusercontent.com/render/math?math=$c(T)=\sum_{e \in E_{T}} c(e)$">
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/12-22-09-39-Screenshot%202021-10-12%20220924.png">
+
+## Thuật toán tìm cây khung nhỏ nhất 
+
+`Prim` và `Kruskal` là hai thuật toán thông dụng để tìm cây khung nhỏ nhất 
+
+  - Thuật toán `Prim` do [Robert Prim] vào năm `1957`
+
+  - Thuật toán `Kruscal` do `Joseph Kruskal` phát minh vào năm `1956`
+
+### Thuật toán `Prim` và `Kruskal`
+
+<div class="videoZen">
+  <iframe width="853" height="480" src="https://www.youtube.com/embed/5-XndRBSwms" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 <comment/> 
