--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/1.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/1.md
@@ -1,5 +1,10 @@
 # <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-33-54-EXPERT%20SYSTEM.png" title="" alt="EXPERT SYSTEM.png" width="50"> Buổi 1 - Quản trị hệ thống
 
+::: tip 📁 TÀI NGUYÊN
+
+[Download file buổi 1](https://drive.google.com/file/d/11BvJHhYwzRjeSmXIL-HpI4y9INfj9k7l/view)
+:::
+
 ## 1. Sử dụng Linux
 
 ### Câu 1.1
