--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/2.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/2.md
@@ -1,5 +1,10 @@
 # <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/17-20-04-53-icons8-manager.png" width="50"> Buổi 2 - Quản lý tài khoản, ổ cứng và tập tin
 
+::: tip 📁 TÀI NGUYÊN
+
+[Download file buổi 2](https://drive.google.com/file/d/17xZ3Wk751LslVJJWKa4cD7O9UBUZEBjd/view)
+:::
+
 ## 1. Cài đặt CentOS
 
 ### Câu 1
