--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/3.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/3.md
@@ -1,5 +1,10 @@
 # <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/11-13-29-20-AMBIENT%20USER%20EXPERIENCE.png" width="50"> Buổi 3 - Shell Scripting, quản lí tiến trình, nhật ký hệ thống
 
+::: tip 📁 TÀI NGUYÊN
+
+[Download file buổi 3](https://drive.google.com/file/d/17VnFy2Qy-aM_RAB4oriuT6KQwDH89yLc/view)
+:::
+
 ## 1.Cài đặt CentOS
 
 ### Câu 1
