--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/5.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/5.md
@@ -1,5 +1,10 @@
 # <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/07-12-46-11-icons8-dns.png"> Buổi 5 - `SAMBA`, `DNS` và `Firewall`
 
+::: tip 📁 TÀI NGUYÊN
+
+[Download file buổi 5](https://drive.google.com/file/d/1MpPj75NVQAIRilgXf4eCjPwWpsZMJEDd/view)
+:::
+
 ## 1. Cài đặt CentOS
 
 ### Câu 1.1
