--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/2.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/2.md
@@ -1,6 +1,9 @@
 # Thực hành buổi 2
 
-[Download tài liệu buổi 2](https://github.com/Zenfection/zenctu/raw/main/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/file/2.pdf)
+::: tip 📁 TÀI NGUYÊN
+
+[Download tài liệu buổi 2](https://drive.google.com/file/d/1j4innvHNEHR-VqrPsZO2wl1PCfcZwTGx/view)
+:::
 
 ## 1.Chuẩn bị
 
