--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/3.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/3.md
@@ -1,6 +1,9 @@
 # Thực hành buổi 3
 
-[Download tài liệu buổi 3](https://github.com/Zenfection/zenctu/raw/main/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/file/3.pdf)
+::: tip 📁 TÀI NGUYÊN
+
+[Download tài liệu buổi 3](https://drive.google.com/file/d/1CfozTltucx3JkhpC5USIGsYB2ae_REVm/view)
+:::
 
 ## 1. Bài tập 8
 
