--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/2.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/2.md
@@ -1,9 +1,9 @@
 # Bài 2: Khái niệm `Graph Theory`
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo Video sau đây : 
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
-    <iframe width="640" height="480" src="https://www.youtube.com/embed/0lN4BYvi9yE?list=PLZDIOVvUyYVxdqTsJ9yvg9TSv4TnQoglO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://drive.google.com/file/d/1rYpelkM7LHCodlhhs433oldoaF7E2Lva/preview"></iframe>
 </div>
 
 Sau đây là lý thuyết mình co động lại (*không nhất thiết phải xem `Video`*)
