--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/7.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/7.md
@@ -1,14 +1,9 @@
 # Bài 7: Duyệt đồ thị
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo Video sau đây : 
-
-::: warning ⚠️ LƯU Ý
-
-Xem video [bài trước](/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/6.md) và xem thêm video dưới đây
-:::
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
-  <iframe width="640" height="480" src="https://www.youtube.com/embed/-i1nmBj9WeI?list=PLZDIOVvUyYVxdqTsJ9yvg9TSv4TnQoglO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe src="https://drive.google.com/file/d/1CG5VlhkS9PDcaImdqP2ITLoNkvPbjSDO/preview"></iframe>
 </div>
 
 ## 1. Duyệt theo chiều sâu (`DFS`)
