--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/9.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/9.md
@@ -5,3 +5,48 @@
 <div class="videoZen">
   <iframe src="https://drive.google.com/file/d/1Ven0o6vugym6QCFDJ-PS0iu50w3IFDQD/preview"></iframe>
 </div>
+
+## Cây khung của đồ thị
+
+- Nếu đồ thị bộ phận `T` của đồ thị vô hướng **liên thông**, `G=(V, E)` là một cya6 thì khi đó cây `T` được gọi là **cây khung** (`spanning tree`) của đồ thị `G`
+
+- Cây khung còn có tên gọi khác là cây phủ, cây bao trùm, cây tối đại.
+
+::: tip VÍ DỤ CÂY KHUNG
+
+<br>
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/12-21-03-34-Screenshot%202021-10-12%20210323.png" width="500">
+
+- Đồ thị `2` và `3` là cây khung của đồ thị `1` vì nó là đồ thị bộ phận và không có chu trình
+:::
+
+Một đơn đồ thị là liên thông nếu nó là cây khung
+
+Định lý `Borchart`, `Sylvester`, `Cayley` 
+
+Số cây khung của đồ thị đầy đủ `Kₙ` là `nⁿ⁻²`
+
+## Cây khung nhỏ nhất lớn nhất
+
+Cho `G=(V, E)` là đồ thị vô hướng, liên thông. Mỗi cạnh `e` thuộc `E` của đồ thị được gán một `trọng số` hay `chi phí` không âm, gọi là độ dài của cạnh đó.
+
+Giả sử `T=(Vₜ, Eₜ)` là cây khung của đồ thị `G`. Ta gọi độ dài `C(T)` của cây khung `T` là tổng độ dài các cạnh của nó
+
+<img src="https://render.githubusercontent.com/render/math?math=$c(T)=\sum_{e \in E_{T}} c(e)$">
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/12-22-09-39-Screenshot%202021-10-12%20220924.png">
+
+## Thuật toán tìm cây khung nhỏ nhất 
+
+`Prim` và `Kruskal` là hai thuật toán thông dụng để tìm cây khung nhỏ nhất 
+
+  - Thuật toán `Prim` do [Robert Prim] vào năm `1957`
+
+  - Thuật toán `Kruscal` do `Joseph Kruskal` phát minh vào năm `1956`
+
+### Thuật toán `Prim` và `Kruskal`
+
+<div class="videoZen">
+  <iframe width="853" height="480" src="https://www.youtube.com/embed/5-XndRBSwms" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
