--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
@@ -5,4 +5,64 @@
 [Download tài liệu buổi 4](https://drive.google.com/file/d/1vBLub8CTxLuUR47jGFbx6hDFt9h6LOIR/view)
 :::
 
+# 1. Bài tập 12
+
+::: tip 💡 MÔ HÌNH
+
+Xây dựng hệ thống mạng với mô hình như sau : 
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/17-18-52-12-Screen%20Shot%202021-10-17%20at%2018.52.04.png">
+:::
+
+### Tạo thư mục và các file
+
+
+```sh
+mkdir ~/Desktop/BaiTap12
+cd ~/Desktop/BaiTap12
+mkdir 
+```
+
+### Thiết lập các file
+
+:::: tabs
+
+  ::: tab lab.conf
+  ```txt
+  router1[0]=H
+  router1[1]=G
+  router1[2]=E
+  router1[3]=A
+  router2[0]=E
+  router2[1]=F
+  router2[2]=B
+  router3[0]=F
+  router3[1]=G
+  router3[2]=I
+  router3[3]=C
+  router4[0]=D
+  router4[1]=I
+  router4[2]=H
+  ```
+  :::
+
+  ::: tab pc1.startup
+  ```txt
+  ifconfig eth0 100.1.0.13/30 up
+  ifconfig eth1 100.1.0.9/30 up
+  ifconfig eth2 100.1.0.1/30 up
+  ifconfig eth3 100.1.1.1/24 up
+  /etc/init.d/quagga start
+  ```
+  :::
+
+  ::: tab pc2.startup
+  ```txt
+  
+  ```
+  :::
+::::
+
+### Khởi tạo hệ thống máy ảo
+
 <comment/>
