--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/8.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/8.md
@@ -3,10 +3,10 @@
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/1SRJa-qq7G_pMFAT2RD0Wk_ELzXM_kUTE/preview"></iframe>
+  <iframe src="https://drive.google.com/file/d/1Vo5Wuo_XmVkXXNG3u8TB2Tkd2j1tihBf/preview"></iframe>
 </div>
 
-## Định nghĩa
+## 1.Định nghĩa
 
 ::: tip 💡 GHI NHỚ 
 
@@ -17,7 +17,7 @@
 ==> Suy ra, đồ thị không có chu trình là một rừng
 :::
 
-## Tính chất của cây
+## 2.Tính chất của cây
 
 ::: tip 💡  ĐỈNH LÝ VỀ ĐỈNH TREO
 
