--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/9.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/9.md
@@ -3,50 +3,65 @@
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/1Ven0o6vugym6QCFDJ-PS0iu50w3IFDQD/preview"></iframe>
+  <iframe src="https://drive.google.com/file/d/1LAHjHp0LwTQJ0CKLRK1BfkVbFmKXCNBt/preview"></iframe>
 </div>
 
-## Cây khung của đồ thị
+## 1.Cây khung của đồ thị
+
+::: tip LÝ THUYẾT
 
 - Nếu đồ thị bộ phận `T` của đồ thị vô hướng **liên thông**, `G=(V, E)` là một cya6 thì khi đó cây `T` được gọi là **cây khung** (`spanning tree`) của đồ thị `G`
 
 - Cây khung còn có tên gọi khác là cây phủ, cây bao trùm, cây tối đại.
-
-::: tip VÍ DỤ CÂY KHUNG
-
-<br>
-
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/12-21-03-34-Screenshot%202021-10-12%20210323.png" width="500">
-
-- Đồ thị `2` và `3` là cây khung của đồ thị `1` vì nó là đồ thị bộ phận và không có chu trình
 :::
 
-Một đơn đồ thị là liên thông nếu nó là cây khung
+> Ví dụ về cây khung 
+>
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/12-21-03-34-Screenshot%202021-10-12%20210323.png" width="500">
+>
+> ==> Đồ thị `2` và `3` là cây khung của đồ thị `1` vì nó là đồ thị bộ phận và không có chu trình
 
-Định lý `Borchart`, `Sylvester`, `Cayley` 
+::: warning LƯU Ý
 
-Số cây khung của đồ thị đầy đủ `Kₙ` là `nⁿ⁻²`
+- Một đơn đồ thị là liên thông nếu nó là cây khung
 
-## Cây khung nhỏ nhất lớn nhất
+- Định lý `Borchart`, `Sylvester`, `Cayley`  ==> Số cây khung của đồ thị đầy đủ `Kₙ` là `nⁿ⁻²`
+:::
+
+## 2. Cây khung nhỏ nhất lớn nhất
 
 Cho `G=(V, E)` là đồ thị vô hướng, liên thông. Mỗi cạnh `e` thuộc `E` của đồ thị được gán một `trọng số` hay `chi phí` không âm, gọi là độ dài của cạnh đó.
 
-Giả sử `T=(Vₜ, Eₜ)` là cây khung của đồ thị `G`. Ta gọi độ dài `C(T)` của cây khung `T` là tổng độ dài các cạnh của nó
+::: tip CÔNG THỨC
 
-<img src="https://render.githubusercontent.com/render/math?math=$c(T)=\sum_{e \in E_{T}} c(e)$">
+Giả sử `T=(Vₜ, Eₜ)` là cây khung của đồ thị `G`. Ta gọi độ dài `C(T)` của cây khung `T` là tổng độ dài các cạnh của nó  
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/12-22-09-39-Screenshot%202021-10-12%20220924.png">
+> <img src="https://render.githubusercontent.com/render/math?math=$c(T)=\sum_{e \in E_{T}} c(e)$" width="150">
+:::
 
-## Thuật toán tìm cây khung nhỏ nhất 
+> Ví dụ về đường đi của cây khung 
+>
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/12-22-09-39-Screenshot%202021-10-12%20220924.png" width="500">
+
+## 3.Thuật toán tìm cây khung nhỏ nhất 
+
+:::tip GỒM 2 THUẬT TOÁN
 
 `Prim` và `Kruskal` là hai thuật toán thông dụng để tìm cây khung nhỏ nhất 
 
-  - Thuật toán `Prim` do [Robert Prim] vào năm `1957`
+  - Thuật toán `Prim` do [Robert Prim](https://en.wikipedia.org/wiki/Robert_C._Prim) vào năm `1957`
 
-  - Thuật toán `Kruscal` do `Joseph Kruskal` phát minh vào năm `1956`
+  - Thuật toán `Kruscal` do [Joseph Kruskal](https://en.wikipedia.org/wiki/Joseph_Kruskal) phát minh vào năm `1956`
+:::
 
 ### Thuật toán `Prim` và `Kruskal`
+
+Hãy theo dõi `Video` sau để hiểu thêm về thuật toán `Prim` và `Kruskal`
 
 <div class="videoZen">
   <iframe width="853" height="480" src="https://www.youtube.com/embed/5-XndRBSwms" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+
+<br>
+
+<comment/>
