--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/10.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/10.md
@@ -1,4 +1,11 @@
-# Bài 10.
+# Bài 10.Đồ thị `Hamilton`
+
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1Ju9tXH7Ypt99FcpVI3KKvHNKmVDU1RYm/preview"></iframe>
+</div>
 
 Đường đi (`path`) từ `u` tới `v` trong một đồ thị vô hướng là một dãy các cạnh `e₁`,`e₂`,..,`eₙ` của đồ thị sao cho `f(e₁)={x₀,x₁}`, `f(e₂)={x₁,x₂}`...`f(eₙ)`=`{xₙ₋₁,xₙ}` (với `x₀`=`u` và `xₙ`=`v`)
 
