--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/11.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/11.md
@@ -1,1 +1,55 @@
 # Bài 11. Đồ thị Hamilton
+
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1lKslXrDSfb2Eb3DDqmr0t8FEbvi9Oy7V/preview"></iframe>
+</div>
+
+## Định nghĩa
+
+- Đường đi `Hamilton` là đường đi qua tất cả các đỉnh trong đồ thị, mỗi đỉnh đúng 1 lần
+
+- Chu trình `Hamilton` là đường đi `hamilton` đi bắt đầu từ 1 đỉnh và trở lại đúng đỉnh đó
+
+==> Đồ thị được gọi là `dồ thị Hamilton` nếu nó chứa chu trình `Hamilton` và gọi là `đồ thị nửa Hamilton` nếu nó chứa đường đi `Hamilton`
+
+
+## Nhận biết `Hamilton`
+
+### Đồ thị là `Hamilton`
+
+Cho đến nay, vẫn chưa tìm ra được điều kiện cần và đủ để tồn tại chu trình `Hamilton`
+
+Các kết quả thu được phần lớn là các điều kiện đủ để một đồ thị `Hamilton` là có dạng `"nếu G có số cạnh đủ lớn thì G là Hamilton"`
+
+### Đồ thị không phải là `Hamilton`
+
+- Đồ thị có `đỉnh treo` không thể tạo ra chu trình `Hamilton`
+
+- Nếu một định có bậc `2` thì cả 2 cạnh liên thuộc với đỉnh này phải là một phần của chu trình `Hamilton`
+
+::: warning LƯU Ý
+
+Chu trình `Hamilton` không thể chứa chu trình nhỏ hơn trong nó
+:::
+
+## Định lý
+
+### Định lý Dirac (`1952`)
+
+Một đơn đồ thị vô hướng `G=(V, E)` với `n` đỉnh (n >= 3) có chu trình `Hamilton` nếu : `deg(v) >= n/2` với mọi `v` thuộc `V`
+### Định lý Ore (`1960`)
+
+Đồ thị vô hướng `G=(V, E)` với `|V| >= 3` có chu trình Hamilton khi : Với mọi `(u,v)` không thuộc `E` => 
+`deg(u) + deg(v) >= n`
+
+::: warning LƯU Ý
+
+Cả 2 định lý trên đều chỉ là điều kiện đủ để một đơn đồ thị liên thông có tồn tại chu trình `Hamilton` => không phải là điều kiện cần
+
+==> Tồn tại một số đồ thị không thoả 2 định lý trên
+
+==> Nếu thoả thì chắc chắn nó là `Hamilton` còn nếu không thoả thì không kết luận được gì
+:::
