--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/10.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/10.md
@@ -1,17 +1,13 @@
-# Bài 10.Đồ thị `Hamilton`
+# Bài 10.Đồ thị `Euler`
 
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/1Ju9tXH7Ypt99FcpVI3KKvHNKmVDU1RYm/preview"></iframe>
+  <iframe src="https://drive.google.com/file/d/1M7upbVV7muYnsqUlRUGuhC3Bc8-R60cA/preview"></iframe>
 </div>
 
-Đường đi (`path`) từ `u` tới `v` trong một đồ thị vô hướng là một dãy các cạnh `e₁`,`e₂`,..,`eₙ` của đồ thị sao cho `f(e₁)={x₀,x₁}`, `f(e₂)={x₁,x₂}`...`f(eₙ)`=`{xₙ₋₁,xₙ}` (với `x₀`=`u` và `xₙ`=`v`)
-
-Khi đồ thị là đơn, ta ký hiệu đường đi này bằng dãy các đỉnh `x₀`,`x₁`, ...`xₙ`
-
-## Đồ thị `Euler`
+## 1.Định nghĩa
 
 Chu trình đơn chứa tất cả các cạnh của đồ thị `G` được gọi là chu trình `Euler`
 
@@ -58,3 +54,9 @@ Bước 3: Đánh dấu cạnh đã đi qua cho biết ta không thể quay lạ
 Bước 4: Đi theo cạnh đó đến đỉnh tiếp theo
 
 Bước 5: Lặp lại bước 2 cho đến khi nào mọi cạnh đêu2 đã được duyệt
+
+## Bài tập
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1qJRCHM72GQaX93cz4xqym75THyVk-y-3/preview"></iframe>
+</div>
