--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/11.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/11.md
@@ -4,7 +4,7 @@
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/1lKslXrDSfb2Eb3DDqmr0t8FEbvi9Oy7V/preview"></iframe>
+  <iframe src="https://drive.google.com/file/d/1aDoye8Y3EuLc2gTo3PzVeNbz-21yLlIv/preview"></iframe>
 </div>
 
 ## Định nghĩa
@@ -53,3 +53,9 @@ Cả 2 định lý trên đều chỉ là điều kiện đủ để một đơn
 
 ==> Nếu thoả thì chắc chắn nó là `Hamilton` còn nếu không thoả thì không kết luận được gì
 :::
+
+## Bài tập
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/12fKUOg0BfOiGRtrAS9TzBxUUJUWak-RS/preview"></iframe>
+</div>
