--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/2.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/2.md
@@ -3,7 +3,7 @@
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
-    <iframe src="https://drive.google.com/file/d/1BA52-yfju6jilGaXoii2cI5VzTAN4uM_/preview"></iframe>
+    <iframe src="https://drive.google.com/file/d/129LV6DDEkFjChkwrn63RmiZSb9z7_Ll0/preview"></iframe>
 </div>
 
 Sau đây là lý thuyết mình co động lại (*không nhất thiết phải xem `Video`*)
@@ -68,6 +68,10 @@ Có tổng cộng 5 loại đồ thị :
 | Thi đấu vòng tròn                                                                                                        | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-19-58-55-output-onlinepngtools%20(2).png"> | **Đỉnh**: Đội tham gia thi đấu<br>Giữa `2` **đỉnh** tồn tại đúng `1` **cạnh**                                                             |
 
 ## 4.Bài tập ví dụ
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1t3x2KxKA0flpLGkR3fflQRqMvWIRo_gJ/preview"></iframe>
+</div>
 
 ### a.Xác định loại đồ thị
 
