--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/4.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/4.md
@@ -3,7 +3,7 @@
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
-    <iframe src="https://drive.google.com/file/d/1yoXhjTZS8CafxD5uBavtJVu47KMQvyTc/preview"></iframe>
+    <iframe src="https://drive.google.com/file/d/1lUXb4AWot4IOYgyHlJLrEfuoEUFPERAd/preview"></iframe>
 </div>
 
 ## 1.Đồ thị con và bộ phận
@@ -38,6 +38,10 @@
 Đồ thị `H2` là đồ thị bộ phận của `G`
 
 ## 2.Bài tập
+
+<div class="videoZen">
+    <iframe src="https://drive.google.com/file/d/1Z4fbLQQUdGFtJCdwzrK1bbgqK58vddaI/preview"></iframe>
+</div>
 
 ### Câu 1
 
@@ -150,6 +154,10 @@ Các đồ thị sau có phải đồ thị `phân đôi` không ❓
 :::
 
 ## 3.Đồ thị đẳng cấu
+
+<div class="videoZen">
+    <iframe src="https://drive.google.com/file/d/1YGzno8MminPdD7VMumm8cAydc-i0abS8/preview"></iframe>
+</div>
 
 ### Khái niệm
 
