--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/5.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/5.md
@@ -3,7 +3,7 @@
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
-    <iframe src="https://drive.google.com/file/d/1pSkGnolxsnqA_M_OD7a0fMEuzJ6tqhDf/preview"></iframe>
+    <iframe src="https://drive.google.com/file/d/156TXiGurH9o7XSkkiNNkrXoGwIrX8jNj/preview"></iframe>
 </div>
 
 ## 1.Biểu diễn bằng danh sách kề
@@ -128,5 +128,11 @@ Với những ma trận vòng thì các định `n-n` là `1` (*để ý đườ
 | 3   | 0   | 0     | 0   | 1     | 1     | 1   | 1     | 1     | 0     |
 | 4   | 0   | 0     | 0   | 0     | 0     | 0   | 1     | 1     | 1     |
 |     | **(1)** | **(2,3)** | **(2)** | **(2,3)** | **(2,3)** | **(3)** | **(3,4)** | **(3,4)** | **(1,4)** |
+
+## 3.Bài tập
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1H1s7y_u7MWOJVzClQAMKt0lBPzSdpL4R/preview"></iframe>
+</div>
 
 <comment/> 
