--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/8.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/8.md
@@ -3,7 +3,7 @@
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/1Vo5Wuo_XmVkXXNG3u8TB2Tkd2j1tihBf/preview"></iframe>
+  <iframe src="https://drive.google.com/file/d/18mQF38IMPibpNi1qA1ae6e2ZEVrR5-hP/preview"></iframe>
 </div>
 
 ## 1.Định nghĩa
@@ -31,5 +31,11 @@ Nếu một cây `T` gồm `n` đỉnh với `n ≥ 2` thì `T` chứa ít nhấ
 > 2. `T` không chứa **chu trình** (nhưng thêm vào 1 cạnh bất kỳ thì thu được 1 **chu trình**) và có `n-1` cạnh
 >
 > 3. Hai đỉnh bất kỳ của `T` được nối với nhau bởi đúng một đường đơn
+
+## 3.Bài tập
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1f1npXNThdvKlBvI_DhK-HC2DJ96Y_ORj/preview"></iframe>
+</div>
 
 <comment/> 
