--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/9.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/9.md
@@ -62,6 +62,10 @@ Hãy theo dõi `Video` sau để hiểu thêm về thuật toán `Prim` và `Kru
   <iframe width="853" height="480" src="https://www.youtube.com/embed/5-XndRBSwms" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
-<br>
+## 4. Ý tưởng thuật toán
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/11FGz6exFzHvgBg46ElymL9UY5YLIXAGY/preview"></iframe>
+</div>
 
 <comment/>
