--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/7.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/7.md
@@ -2,11 +2,11 @@
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
-<div class="videoZen">
-  <iframe src="https://drive.google.com/file/d/1pIV9S0H6AEhMwqfdAm_XJAbTdu9uOW-E/preview"></iframe>
-</div>
-
 ## 1. Duyệt theo chiều sâu (`DFS`)
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1uMlInfeYxoxrT3Gr4s-glk812RhhX_oa/preview"></iframe>
+</div>
 
 ::: tip 🤔 Ý TƯỞNG
 
@@ -30,6 +30,10 @@ Chọn `a` ⇨ `b` ⇨ `c` ⇨ `g` ⇨ `d` ⇨ `e` ⇨ `f` ⇨ `h` (*nhỏ tới
 
 Chọn `a` ⇨ `g` ⇨ `e` ⇨ `b` ⇨ `h` ⇨ `e` ⇨ `f` ⇨ `d` (*lớn tới nhỏ*)
 ## 2. Duyệt theo chiều rộng (`BFS`)
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1ZdeWWLxK5OiQjF-fVso-FP4s0O_JMz5Z/preview"></iframe>
+</div>
 
 ::: tip 🤔 Ý TƯỞNG
 
@@ -55,5 +59,11 @@ Chọn `d` ⇨ `h` ⇨ `e` ⇨ `b` ⇨ `f` ⇨ `c` ⇨ `a` ⇨ `g`
 
 Thực chất `BFS` theo cơ chế `Hàng đợi` còn `DFS` theo cớ chế `Ngăn Xếp`
 :::
+
+## 3.Ý tưởng thuật toán
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1-f5Fk-co3rkEvdBnaB3sXg1q4H8lVH-D/preview"></iframe>
+</div>
 
 <comment/> 
