--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/10.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/10.md
@@ -1,4 +1,4 @@
-# Bài 10.Đồ thị `Euler`
+# Bài 10: Đồ thị `Euler`
 
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
