--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/12.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/12.md
@@ -1,4 +1,4 @@
-# Bài 12: Thuật toán đường đi `Dijkstra`
+# Bài 12: Thuật toán `Dijkstra`
 
 ## 1.Đường đi có trọng số
 
@@ -42,5 +42,3 @@ Xét đồ thị `G=(V, E)` có trọng số không âm
 <div class="videoZen">
   <iframe src="https://drive.google.com/file/d/1hHVxpg-Gi2xG0l5g1FNEtLPyCAw0pRNS/preview"></iframe>
 </div>
-
-
