--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/11.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/11.md
@@ -62,6 +62,8 @@ Cả 2 định lý trên đều chỉ là điều kiện đủ để một đơn
 
 ## 4.Bài tập
 
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
+
 <div class="videoZen">
   <iframe src="https://drive.google.com/file/d/12fKUOg0BfOiGRtrAS9TzBxUUJUWak-RS/preview"></iframe>
 </div>
