--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/12.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/12.md
@@ -1,10 +1,12 @@
 # Bài 12: Thuật toán `Dijkstra`
 
-## 1.Đường đi có trọng số
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
   <iframe src="https://drive.google.com/file/d/1uN0rsjIUDO91BAo7xm2RSvtA6-J_oOV7/preview"></iframe>
 </div>
+
+## 1.Đường đi có trọng số
 
 ### Định nghĩa
 
@@ -38,6 +40,8 @@ Xét đồ thị `G=(V, E)` có trọng số không âm
 - Dữ liệu xuất là đường đi ngắn nhất từ `u` tới `v`
 
 ## 3.Code thuật toán
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
 
 <div class="videoZen">
   <iframe src="https://drive.google.com/file/d/1hHVxpg-Gi2xG0l5g1FNEtLPyCAw0pRNS/preview"></iframe>
