--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/14.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/14.md
@@ -1,1 +1,8 @@
 # Bài 14: Thuật toán `Floyd-Warshall`
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/12-16-19-36-icons8-movie_beginning.png" width="30"> Tham khảo `Video` sau đây : 
+
+<div class="videoZen">
+  <iframe src="https://drive.google.com/file/d/1mufPbhT0G_vEkEn6utU6PZE5Uiql4qGr/preview"></iframe>
+</div>
+
