--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/1.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/1.md
@@ -10,32 +10,18 @@ Trong bài này bạn cần nắm bắt các mục như sau :
 >
 > - Danh sách đỉnh kề của 1 đỉnh
 
-::: tip 💡 THƯ VIỆN
-
-Sử dụng các thư viện sau:
-
-```c:no-line-numbers
-#include <stdio.h>    // thư viện cơ bản của C
-#include <stdbool.h>  // hỗ trợ true/false cho C
-#include "list.h"     // thư viện cá nhân hỗ trợ danh sách
-```
-:::
-
 ::: warning ⚠️ LƯU Ý
 
 Tất cả các đỉnh trong đồ thị bắt đầu từ `1` thay vì `0`, nên hãy để ý rõ không thì sai !!!
 :::
-
-> ⇣ Download thư viện [list.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/source/list.h)
 
 ## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-44-57-icons8-tree_structure.png" width="35"> Cấu trúc đồ thị
 
 ### Danh sách đỉnh cung
 
 ```c
-#define MAX_VERTEX 50 
 typedef struct{
-    int A[MAX_VERTEX][MAX_VERTEX];
+    int A[MAX][MAX];
     int n; //số đỉnh
     int m; //số cung
 }Graph;
@@ -44,8 +30,6 @@ typedef struct{
 ### Danh sách cung
 
 ```c
-#define MAX 50
-
 typedef struct {
     int u, v;
     int w;
@@ -72,14 +56,18 @@ void init_Graph(Graph *G, int n){ //khởi tạo đồ thị với n đỉnh
             G->A[i][j] = 0;
 }
 
-void add_edge(Graph *G, int x, int y){    //thêm 1 cung vào đồ thị
-    if(G->A[x][y] == 1 && G->A[x][y] == 1) //trường hợp đa cung
-        G->A[x][y] = G->A[y][x] = 2;
+void add_edge(Graph *G, int x, int y){ //thêm 1 cung vào đồ thị
+    if(G->A[x][y] > 0 && G->A[x][y] > 0) //trường hợp đa cung
+        G->A[x][y] = G->A[y][x] += 1;
     else
         G->A[x][y] = G->A[y][x] = 1;
 }
 
-void add_edgeDirection(Graph *G, int x,int y){ // thêm 1 cung cho đồ thị có hướng
+// thêm 1 cung cho đồ thị có hướng
+void add_edgeDirection(Graph *G, int x,int y){ 
+    if(G->A[x][y] > 0){ //trường hợp đa cung
+        G->A[x][y] += 1;
+    }
     G->A[x][y] = 1;
 }
 
@@ -101,50 +89,52 @@ Hàm thêm cung tuỳ thuộc vào hoàn cảnh bài toán mà bạn sửa lại
 ### Hàm thao tác cơ bản
 
 ```c
-int degree(Graph G, int x){ // tính bậc của đỉnh
+int inDegree(Graph G, int x){ //tính bậc trong của đồ thị
     int count = 0;
-    for (int i = 1; i <= G.n; i++)
+    for (int i = 1; i <= G.n; i++){
         if(G.A[x][i] == 1)
             count++;
+    }
     return count;
 }
-List neighbors(Graph G, int x){ // trả về danh sách các đỉnh kề
-    List L; 
-    makeNullList(&L);
-    for (int i = 1; i <= G.n; i++)
-        if(G.A[x][i] == 1){
-            insertList(i,&L);
-    return L;
+int outDegree(Graph G, int x){ //tính bậc ngoài của đồ thị
+    int count = 0;
+    for(int i = 1; i <= G.n; i++){
+        if(G.A[i][x] == 1)
+            count++;
+    }
+    return count;
 }
-List arrayGraph(Graph G){ // trả về danh sách các đỉnh trong đồ thị
-    List L;
-    makeNullList(&L);
-    for (int i = 1; i <= G.n; i++)
-        insertList(i,&L);
-    return L;
-}
-```
-
-### Các hàm xử lý đồ thị
-
-```c
-bool multiEdge(Graph G){  // kiểm tra có chứa đa cung không
-    for (int i = 1; i <= G.n; i++)
-        for (int j = 0; j <= G.n; j++)
-            if(G.A[i][j] > 1) // hoặc = 2 đều được
-                return true;
-            
-    return false;
-}
-
 int maxDegree(Graph G){
-    int max = degree(G,1);
+    int max = inDegree(G,1); //sử dụng bậc trong hay ngoài đều được
     for(int i = 2; i <= G.n; i++){
-        int x = degree(G,i);
+        int x = inDegree(G,i);
         if(max < x)
             max = x;
     }
-    return x;
+    return max;
+}
+bool multiEdge(Graph G){ //kiểm tra có chứa đa cung không
+    for (int i = 1; i <= G.n; i++){
+        for (int j = 0; j <= G.n; j++)
+            if(G.A[i][j] > 1) // hoặc == 2 đều được
+                return true;
+    }
+    return false;
+}
+List neighbors(Graph G, int x){ //trả về danh sách các đỉnh kề
+    List L; makeNullList(&L);
+    for (int i = 1; i <= G.n; i++){
+        if(G.A[x][i] == 1)
+            insertList(i,&L);
+    }
+    return L;
+}
+List arrayGraph(Graph G){ // trả về danh sách các đỉnh trong đồ thị
+    List L; makeNullList(&L);
+    for (int i = 1; i <= G.n; i++)
+        insertList(i,&L);
+    return L;
 }
 ```
 
