--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/2.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/2.md
@@ -131,75 +131,42 @@ Hàm trả về đầy đủ các đỉnh kể cả khi đồ thị `không liê
 
 ## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-15-42-29-icons8-connect.png" width="35">Tính Liên thông của đồ thị
 
-### Kiểm tra đồ thị liên thông
 
-> Là đồ thị khi một đỉnh bất kỳ có thể đi tới tất cả các đỉnh còn lại trong đồ thị
-
-::: tip 💡 TƯ TƯỞNG
-
-Sử dụng hàm `subBFS()` hoặc `subDFS()` để trả về danh sách cách đỉnh duyệt khi duyệt qua 1 lần
-
-==> Nếu số phần tử trong danh sách = với số đỉnh trong đồ thị thì `liên thông`
-:::
+Là đồ thị khi một đỉnh bất kỳ có thể đi tới tất cả các đỉnh còn lại trong đồ thị
 
 ```c
+//kiểm tra đồ thị liên thông
 int connectedGraph(Graph G){
-    List L; makeNullList(&L);
-    int x = 1;
-    List queue; makeNullList(&queue);
-    insertList(x,&queue);
-    subBFS(G,queue,&L); 
-    
-    //List stack; makeNullStack(&stack);
-    //pushStack(&stack, x);
-    //subDFS(G,stack,&L);
-    return L.Size == G.n;
-}
-```
-
-### Kiểm tra đồ thị liên thông mạnh
-
-> Sử dụng lại hàm [duyệt theo chiều sâu bằng đệ quy](/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/2.md#su-dung-đe-quy) 
-
-```c
-bool checkConnectedStrong(Graph G){
-    for (int i = 1; i <= G.n; i++){
-        bool visited[G.n + 1]; // bắt đầu từ đỉnh 1 thay vì 0
-        for (int i = 1; i <= G.n; i++){ // khởi tạo ban đầu là false
-            visited[i] = false;
-        }
-        DFS_Re(G, i, visited); // duyệt đệ quy DFS đồ thị
-        for (int i = 1; i <= G.n; i++){
-            if(!visited[i]){ // nếu có 1 đỉnh chưa duyệt được thì false
-                return false;
-            }
-        }
+    bool visited[G.n + 1]; // bắt đầu từ đỉnh 1 thay vì 0
+    for (int i = 1; i <= G.n; i++){ // khởi tạo ban đầu là false
+        visited[i] = false;
+    }
+    DFS_Re(G,x,visited);
+    for(int i = 1; i <= G.n; i++){
+        if(!visited[i])
+            return false;
     }
     return true;
 }
-```
 
-### Đếm số liên thông mạnh trong đồ thị
-
-
-```c
-int countStrongConnected(Graph G){
-    int count = 0;
-    if(checkConnectedStrong(G)){
-        return 1;
-    }
+//kiểm tra đồ thị liên thông mạnh
+bool connectedStrongGraph(Graph G){
     for (int i = 1; i <= G.n; i++){
-        bool visited[G.n + 1];
-        for (int i = 1; i <= G.n; i++){ // khởi tạo ban đầu là false
-            visited[i] = false;
-        }
-        DFS_Re(G, i, visited); // duyệt một lần
-        for (int i = 1; i <= G.n; i++){
-            if(!visited[i]){
-                count++;
-                break;
-            }
-        }
+        if(!connectedGraph(G,i))
+            return false;
+    }
+    return true;
+}
+
+//đếm số đồ thị liên thông mạnh
+int countSubConnectedGraph(Graph G){
+    if(connectedStrongGraph(G)) 
+        return 1;
+    
+    int count = 0;
+    for(int i = 1; i <= G.n; i++){
+        if (!connectedGraph(G,i))
+            count++;
     }
     return count;
 }
