--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/3.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/3.md
@@ -24,7 +24,7 @@ Sử dụng các thư viện sau:
 Tất cả các đỉnh trong đồ thị bắt đầu từ `1` thay vì `0`, nên hãy để ý rõ không thì sai !!!
 :::
 
-## Tìm đường đi ngắn nhất bằng `Dijkstra`
+## Thuật toán `Dijkstra`
 
 ```c
 void dijksta(Graph G, int s, List *parrent, List *cost){
@@ -63,7 +63,7 @@ void dijksta(Graph G, int s, List *parrent, List *cost){
 }
 ```
 
-## Tìm đường đi ngắn nhất bằng `bellman-Ford`
+## Thuật toán `bellman-Ford`
 
 ```c
 void bellmanFord(Graph G, int s,List *cost, List *parrent){
@@ -73,9 +73,8 @@ void bellmanFord(Graph G, int s,List *cost, List *parrent){
     }
 
     cost->Size = parrent->Size = G.n;
-    
-    cost->Data[s] = 0;
-    parrent->Data[s] = -1;
+    cost->Data[s] = 0; //có thể thay đổi
+    parrent->Data[s] = -1; //có thể thay đổi
 
     for(int it = 1; it < G.n; it++){
         for(int k = 1; k <= G.m; k++){
@@ -89,5 +88,74 @@ void bellmanFord(Graph G, int s,List *cost, List *parrent){
             }
         }
     }
+}
+```
+
+## Mê cung số (*nâng cao*)
+
+> VÍ DỤ
+>
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/28-15-19-07-Screen%20Shot%202018-03-05%20at%207.23.34%20AM.png" width="200">
+
+::: tip 💡 YÊU CẦU
+
+- Xuất phát từ góc trái bên trên của ma trận (*cụ thể là `0`*)
+
+- Hãy tìm đường đi ngắn nhất từ vị trí **xuất phát** tới góc phải bên dưới của ma trận (*cụ thể là `5`*)
+
+==> Đường đi có chi phí thấp nhất cho ví dụ này là `24`
+:::
+
+
+```c
+int main(int argc, char const *argv[]){
+    Graph G;
+    makeNullGraph(&G);
+    //freopen("dt.txt","r",stdin);
+    int row,col;
+    scanf("%d%d", &row,&col);
+    G.n = row * col;
+    init_Graph(&G, G.n);
+    int M[MAX][MAX];
+    for (int i = 0; i < row; i++){
+        for (int j = 0; j < col; j++){
+            scanf("%d",&M[i][j]);
+        }
+    }
+    
+    for (int i = 0; i < row; i++){
+        for (int j = 0; j < col; j++){
+            if(j + 1 == col){
+                int x = i * col + j + 1;
+                int y = (i+1) * col + j + 1;
+                int t = M[i+1][j];
+                add_edgeDirectionWeight(&G,x,y,t);
+                G.m += 1;
+            }
+            else if(i + 1 == row){
+                int x = i * col + j + 1;
+                int y = i * col + (j+1) + 1;
+                int t = M[i][j+1];
+                add_edgeDirectionWeight(&G,x,y,t);
+                G.m += 1;
+            }
+            else{
+                int x = i * col + j + 1;
+                int y1 = i * col + (j+1) + 1;
+                int y2 = (i+1) * col + j + 1;
+                int t1 = M[i][j+1];
+                int t2 = M[i+1][j];
+                add_edgeDirectionWeight(&G,x,y1,t1);
+                add_edgeDirectionWeight(&G,x,y2,t2);
+                G.m += 2;
+            }            
+        }
+    }
+    List cost; makeNullList(&cost);
+    List parrent; makeNullList(&parrent);
+    dijkstra(G,1,M[0][0],&parrent,&cost);
+    
+    printf("%d",cost.Data[G.n]);
+    return 0;
 }
 ```
